# Gemmm

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  genindex.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: book.yml  distribute_package.yml  draft-pdf.yml  test_package.yml
_modules/: index.html
_modules/gemmm/: model.html
_sources/md/: fourier.md  performance.md  radiation.md  welcome.md
_sources/notebooks/: example.ipynb
_sources/rst/: autodoc-model.rst
docs/: _config.yml  _toc.yml  requirements.txt
docs/_build/.doctrees/: environment.pickle
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/md/: fourier.html  (+3 more)
docs/bib/: ref.bib
docs/md/: data.md  intro.md  performance.md  radiation.md  welcome.md
docs/notebooks/: example.ipynb  weekday_samples_2025-04-24--14-52-28.nc  weekday_samples_2025-04-24--15-11-06.nc  weekday_samples_2025-04-24--16-12-33.nc  weekday_samples_2025-04-24--16-15-47.nc  weekday_samples_2025-04-24--16-27-07.nc  weekday_samples_2025-04-24--16-41-22.nc
examples/: getting_started.ipynb  weekday_samples_2025-04-29--16-02-29.nc
md/: bib.html  data.html  fourier.html  intro.html  performance.html  radiation.html  welcome.html
notebooks/: example.html
paper/: paper.bib  paper.md
rst/: autodoc-model.html
src/gemmm/: __init__.py  fetch_data.py  fetch_model_data.py  model.py  tables.py
src/gemmm/data/: msoa_table.parquet
tests/: test_model.py  test_sample.nc
(+15 files in other folders)
